--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "react-icons": "^4.1.0",
     "swiper": "^6.4.6",
     "typewriter-effect": "^2.17.0"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
