--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.5",
-    "node-sass": "^5.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "eslint-config-next": "^14.1.2",
+    "next": "^14.1.2",
+    "node-sass": "^9.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.1.0",
-    "swiper": "^6.4.6",
+    "sass": "^1.71.1",
+    "swiper": "^6.8.4",
     "typewriter-effect": "^2.17.0"
-  },
-  "engines": {
-    "node": ">=16"
   }
 }
