--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "sass": "^1.71.1",
     "swiper": "^6.8.4",
     "typewriter-effect": "^2.17.0"
+  },
+  "engines": {
+    "node": "20.10.0"
   }
 }
