--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
@@ -19,6 +19,6 @@
     "typewriter-effect": "^2.17.0"
   },
   "engines": {
-    "node": "20.10.0"
+    "node": ">=18.x"
   }
 }
